# BitLib

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  coverage.yml
benchmark/: CMakeLists.txt
benchmark/src/: benchmark_main.cc  benchmark_main.cc_old  copy_bench.hpp  count_bench.hpp  fill_bench.hpp  find_bench.hpp  reverse_bench.hpp  rw_bench.hpp  shift_bench.hpp  swap_ranges-bench.hpp  transform_bench.hpp
example/: CMakeCache.txt  CMakeLists.txt  Makefile  bench.cpp  cmake_install.cmake  print.cpp  timing.cpp  vectorbool.cpp
example/src/: example1.cpp
include/: bitvector.hpp
include/bit-algorithms/: any_of.hpp  bit_algorithm_details.hpp  copy_backward.hpp  count.hpp  debug_utils.hpp  fill.hpp  find.hpp  inner_product.hpp  move.hpp  move_backward.hpp  next_permutation.hpp  reduce.hpp  replace.hpp  replace_copy.hpp  rotate.hpp  search.hpp  search_n.hpp  shuffle.hpp  swap_ranges.hpp  transform.hpp  transform_inclusive_scan.hpp  transform_reduce.hpp  type_traits.hpp
include/bit-containers/: bit-containers.hpp  bitvector.hpp
include/bit-iterator/: bit_iterator.hpp  bit_reference.hpp  linear_overload.hpp
include/bitlib/: bitlib.hpp
include/bitlib/bit-algorithms/: .count.hpp.swp  all_of.hpp  bit_algorithm.hpp  bit_algorithm_details.hpp  copy.hpp  copy_backward.hpp  copy_n.hpp  count.hpp  debug_utils.hpp  equal.hpp  equal_range.hpp  fill.hpp  fill_n.hpp  find.hpp  find_end.hpp  find_first_of.hpp  for_each.hpp  for_each_n.hpp  includes.hpp  mismatch.hpp  move.hpp  none_of.hpp  reverse.hpp  reverse_copy.hpp  rotate.hpp  search.hpp  shift.hpp  swap.hpp  swap_ranges.hpp  transform.hpp  transform_exclusive_scan.hpp  type_traits.hpp
include/bitlib/bit-containers/: bit-containers.hpp  bit_vector.hpp  bitvector.hpp
include/bitlib/bit-iterator/: bit.hpp  bit_details.hpp  bit_iterator.hpp  bit_pointer.hpp  bit_reference.hpp  bit_value.hpp  linear_overload.hpp
profile/: .CMakeLists.txt.swp  CMakeLists.txt
profile/src/: main.cpp
src/benchmarks/: and_bench.cpp  benchmark_main.cc  copy_backward_bench.hpp  copy_bench.cpp  copy_bench.hpp  count.cpp  count_bench.hpp  equal_bench.hpp  fill_bench.hpp  fixtures.hpp  move_bench.hpp  not_bench.cpp  reverse_bench.cpp  reverse_bench.hpp  rotate_bench.cpp  rotate_bench.hpp  search_bench.hpp  shift_bench.cpp  shift_bench.hpp  swap_ranges-bench.hpp  transform_bench.hpp
src/unit-tests/: .fixtures.hpp.swp  .test-copy.cpp.swp  fixtures.hpp  test-copy.cpp  test-copy_backward.cpp  test-count.cpp  test-equal.cpp  test-fill.cpp  test-find.cpp  test-move.cpp  test-rotate.cpp  test-shift.cpp  test-swap_ranges.cpp  test-transform.cpp  vector_test.cpp
src/utils/: test_utils.hpp
test/: .CMakeLists.txt.swp  CMakeLists.txt  vector_test.cpp
test/src/: fixtures.hpp  test-copy.cpp  test-copy_backward.cpp  test-equal.cpp  test-fill.cpp  test-find.cpp  test-move.cpp  test-reverse.cpp  test-rotate.cpp  test-shift.cpp  test-swap_ranges.cpp  test-transform.cpp  vector_test.cpp
tests/: vector_test.cpp
tests/benchmarks/: benchmark_main.cc  count_bench.hpp  reverse_bench.hpp  rotate_bench.hpp  search_bench.hpp  shift_bench.hpp
tests/unit-tests/: fixtures.hpp  test-count.cpp  test-find.cpp  test-reverse.cpp  test-rotate.cpp  test-shift.cpp  vector_test.cpp
tests/utils/: test_utils.hpp
